@@ -14,6 +14,9 @@ Backward compatibile changes:
 
   BUGFIXES: 
 
+  ZOOKEEPER-144. add tostring support for watcher event, and enums for event
+  type/state (Jakob Homan via phunt)
+
   ZOOKEEPER-21. Improve zk ctor/watcher (state transition) docs (phunt)
 
   ZOOKEEPER-142. Provide Javadoc as to the maximum size of the data byte 
